--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     width: 90%;
     max-width: 500px;
     
-    background: #777696;
+    background: #6c6a9c;
     color: #fff;
     border-radius: 20px;
     padding: 40px 35px;
